--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
-  language: python
-  os: osx
-  python:
-    - "3.6"
-    - "3.7"
-    - "3.8"
-    - "3.8-dev"
-    - "nightly"
-  install:
-  - pip install -r requirements.txt
-  script:
-    - pytest
+matrix:
+  include:      
+    - name: "Python 3.6.5 on macOS 10.13"
+      os: osx
+      osx_image: xcode9.4  # Python 3.6.5 running on macOS 10.13
+      language: shell  # 'language: python' is an error on Travis CI macOS
+      before_install:
+        - python3 --version
+        - pip3 install -U pip
+        - pip3 install -U pytest
+        - pip3 install codecov
+      install:
+        - pip install -r requirements.txt
+      script: python3 -m pytest
+      after_success: python 3 -m codecov
