--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,16 @@ matrix:
         - pip install -r requirements.txt
       script: python3 -m pytest
       after_success: python 3 -m codecov
+    - name: "xcode9"
+      os: osx
+      osx_image: xcode9
+      language: shell  # 'language: python' is an error on Travis CI macOS
+      before_install:
+        - python3 --version
+        - pip3 install -U pip
+        - pip3 install -U pytest
+        - pip3 install codecov
+      install:
+        - pip install -r requirements.txt
+      script: python3 -m pytest
+      after_success: python 3 -m codecov
