--- a/.travis.yml
+++ b/.travis.yml
@@ -10,19 +10,20 @@ matrix:
         - pip3 install -U pytest
         - pip3 install codecov
       install:
-        - pip install -r requirements.txt
+        - pip3 install -r requirements.txt
       script: python3 -m pytest
       after_success: python 3 -m codecov
     - name: "xcode9"
       os: osx
       osx_image: xcode9
       language: shell  # 'language: python' is an error on Travis CI macOS
-      before_install:
-        - python3 --version
-        - pip3 install -U pip
-        - pip3 install -U pytest
-        - pip3 install codecov
       install:
-        - pip install -r requirements.txt
-      script: python3 -m pytest
-      after_success: python 3 -m codecov
+        - |
+          curl -L -O https://www.python.org/ftp/python/3.8.5/python-3.8.5-macosx10.9.pkg
+          sudo installer -package python-3.8.5-macosx10.9.pkg -target /
+          sudo ln -s python3 /usr/local/bin/python
+          hash -r
+          python -mpip install --upgrade pip wheel
+          python -mpip install certifi pytest
+          python -mpip install -r requirements.txt
+      script: python -m pytest
